force-app/main/default/objects/IndisponibilidadeAeronave__c/IndisponibilidadeAeronave__c.object-meta.xml
<CustomObject>
    <description>Objeto intermediário que indica a indisponibilidade das aeronaves.</description>
    <label>Indisponibilidade da Aeronave</label>
    <nameField>
        <displayFormat>IDA-{0000}</displayFormat>
        <label>Número Indisponibilidade de Aeronave</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indisponibilidade das Aeronaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>