force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <description>Indica a aeronave indisponível.</description>
    <inlineHelpText>Indica a aeronave indisponível.</inlineHelpText>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Indisponibilidade das Aeronaves</relationshipLabel>
    <relationshipName>DisponibilidadeAeronaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>