force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/AtrasoFimPrevisto__c.field-meta.xml
<CustomField>
    <fullName>AtrasoFimPrevisto__c</fullName>
    <description>Campo de Integração com o SIG</description>
    <inlineHelpText>Campo de Integração com o SIG</inlineHelpText>
    <label>Atraso do Fim Previsto</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>