force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indica o contrato ao qual a aeronave indisponível é referente.</description>
    <inlineHelpText>Indica o contrato ao qual a aeronave indisponível é referente.</inlineHelpText>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Indisponibilidade das Aeronaves</relationshipLabel>
    <relationshipName>IndisponibilidadeAeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>