force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Disponibilidade__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidade__c</fullName>
    <description>Tempo total de disponibilidade contratual.</description>
    <formula>FimDisponibilidadeContratual__c - InicioDisponibilidadeContratual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tempo total de disponibilidade contratual.</inlineHelpText>
    <label>Disponibilidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>