force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/EventoInesperado__c.field-meta.xml
<CustomField>
    <fullName>EventoInesperado__c</fullName>
    <description>Campo de Integração com o SIG</description>
    <inlineHelpText>Campo de Integração com o SIG</inlineHelpText>
    <label>Evento Inesperado</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>