force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Fim__c.field-meta.xml
<CustomField>
    <fullName>Fim__c</fullName>
    <description>Indica a data de fim do período de indisponibilidade.</description>
    <inlineHelpText>Indica a data de fim do período de indisponibilidade.</inlineHelpText>
    <label>Fim</label>
    <type>DateTime</type>
</CustomField>