force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/FimDisponibilidadeContratual__c.field-meta.xml
<CustomField>
    <fullName>FimDisponibilidadeContratual__c</fullName>
    <description>hora que encerra a disponibilidade.</description>
    <inlineHelpText>hora que encerra a disponibilidade.</inlineHelpText>
    <label>Fim da Disponibilidade Contratual</label>
    <type>Time</type>
</CustomField>