force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/FimDisponibilidadeContratualFuso__c.field-meta.xml
<CustomField>
    <fullName>FimDisponibilidadeContratualFuso__c</fullName>
    <description>Fim da disponibilidade contratual removendo 3 horas devido ao fuso</description>
    <formula>FimDisponibilidadeContratual__c - (3 * 60 * 60 * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fim da disponibilidade contratual removendo 3 horas devido ao fuso</inlineHelpText>
    <label>Fim da Disponibilidade Contratual Fuso</label>
    <type>Time</type>
</CustomField>