force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <description>Indica a data de início do período de indisponibilidade.</description>
    <inlineHelpText>Indica a data de início do período de indisponibilidade.</inlineHelpText>
    <label>Início</label>
    <type>DateTime</type>
</CustomField>