force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/InicioDisponibilidadeContratual__c.field-meta.xml
<CustomField>
    <fullName>InicioDisponibilidadeContratual__c</fullName>
    <description>Indica a hora que inicia a disponibilidade.</description>
    <inlineHelpText>Indica a hora que inicia a disponibilidade.</inlineHelpText>
    <label>Início da Disponibilidade Contratual</label>
    <type>Time</type>
</CustomField>