force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/InicioDisponibilidadeContratualFuso__c.field-meta.xml
<CustomField>
    <fullName>InicioDisponibilidadeContratualFuso__c</fullName>
    <description>Início da disponibilidade contratual removendo 3 horas devido ao fuso</description>
    <formula>InicioDisponibilidadeContratual__c - (3 * 60 * 60 * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Início da disponibilidade contratual removendo 3 horas devido ao fuso</inlineHelpText>
    <label>Início da Disp Contratual Fuso</label>
    <type>Time</type>
</CustomField>