force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/ItemContrato__c.field-meta.xml
<CustomField>
    <fullName>ItemContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item do contrato da indisponibilidade</description>
    <inlineHelpText>Item do contrato da indisponibilidade</inlineHelpText>
    <label>Item do Contrato</label>
    <referenceTo>ItemContrato__c</referenceTo>
    <relationshipLabel>Indisponibilidade das Aeronaves</relationshipLabel>
    <relationshipName>IndisponibilidadeAeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>