force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/LinkVooIndisponivel__c.field-meta.xml
<CustomField>
    <fullName>LinkVooIndisponivel__c</fullName>
    <description>Indica uma lista dos voos indisponíveis que precisam de alteração na aeronave.
(Este campo é utilizado para template de e-mail)</description>
    <label>Link Voo Indisponível</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>