force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de Integração com o SIG</description>
    <inlineHelpText>Campo de Integração com o SIG</inlineHelpText>
    <label>Local</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Indisponibilidade das Aeronaves</relationshipLabel>
    <relationshipName>IndisponibilidadeAeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>