force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Campo de Integração com o SIG</description>
    <inlineHelpText>Campo de Integração com o SIG</inlineHelpText>
    <label>Motivo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>