force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Prefixo__c.field-meta.xml
<CustomField>
    <fullName>Prefixo__c</fullName>
    <description>Prefixo da Aeronave da indisponibilidade.</description>
    <formula>Aeronave__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prefixo da Aeronave da indisponibilidade.</inlineHelpText>
    <label>Prefixo</label>
    <type>Text</type>
</CustomField>