force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/PrevisaoFim__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoFim__c</fullName>
    <description>Campo que informa a previsão de término da indisponibilidade.</description>
    <inlineHelpText>Campo que informa a previsão de término da indisponibilidade.</inlineHelpText>
    <label>Previsão de Fim</label>
    <type>DateTime</type>
</CustomField>