force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo de Integração com o SIG.</description>
    <inlineHelpText>Campo de Integração com o SIG.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Finalização</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Aguardando Aprovação Comercial</fullName>
            </value>
            <value>
                <fullName>Aprovado - Comandante</fullName>
                <isActive>false</isActive>
                <label>Aprovado - Comandante</label>
            </value>
            <value>
                <fullName>Aprovado - Comercial</fullName>
                <isActive>false</isActive>
                <label>Aprovado - Comercial</label>
            </value>
            <value>
                <fullName>Aprovado - Coordenação</fullName>
                <isActive>false</isActive>
                <label>Aprovado - Coordenação</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
                <isActive>false</isActive>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>Rascunho</fullName>
                <isActive>false</isActive>
                <label>Rascunho</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>