force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Indica o tipo da indisponibilidade.</description>
    <inlineHelpText>Indica o tipo da indisponibilidade.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPRG</fullName>
            </value>
            <value>
                <fullName>MNPR</fullName>
            </value>
            <value>
                <fullName>OPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>