force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/TotalCompletoHoras__c.field-meta.xml
<CustomField>
    <fullName>TotalCompletoHoras__c</fullName>
    <formula>TotalCompleto__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Completo Horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>