force-app/main/default/objects/IndisponibilidadeAeronave__c/fields/TotalHoras__c.field-meta.xml
<CustomField>
    <fullName>TotalHoras__c</fullName>
    <formula>Total__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>